<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_root_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FBFBFB"
    android:orientation="vertical"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:background="#00FFFFFF">

        <ImageView
            android:id="@+id/drawer_opener"
            android:layout_width="46dp"
            android:layout_height="46dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_margin="15dp"
            android:contentDescription="@string/todo"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:fontFamily="@font/avalon"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="@color/black"
            android:textSize="22sp"
            android:textStyle="bold"
            tools:ignore="RelativeOverlap" />

        <ImageView
            android:id="@+id/rate_win"
            android:layout_width="46dp"
            android:layout_height="46dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="15dp"
            android:contentDescription="@string/todo"
            android:visibility="visible" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#00FFFFFF">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                tools:ignore="UselessParent">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">


                    <androidx.appcompat.widget.Toolbar
                        android:id="@+id/main_toolbar"
                        android:layout_width="match_parent"
                        android:layout_height="?attr/actionBarSize"
                        android:background="?attr/colorPrimary"
                        android:theme="@style/ToolbarTheme"
                        android:visibility="gone" />


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center_horizontal"
                        android:orientation="vertical">


                        <TextView
                            android:id="@+id/vpn_connection_time_text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:visibility="gone"
                            android:layout_marginTop="@dimen/_6dp"
                            android:text="@string/connection_time"
                            android:textColor="@color/black"
                            android:textSize="12sp" />

                        <RelativeLayout
                            android:id="@+id/first_elipse"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@drawable/ellipse_3">

                            <pl.bclogic.pulsator4droid.library.PulsatorLayout
                                android:id="@+id/pulsator"
                                android:layout_width="250dp"
                                android:layout_height="250dp"
                                android:layout_centerInParent="true"
                                app:pulse_color="@color/color_btn"
                                app:pulse_count="5"
                                app:pulse_duration="1500"
                                app:pulse_interpolator="Accelerate"
                                app:pulse_repeat="0"
                                app:pulse_startFromScratch="false" />

                            <TextView
                                android:id="@+id/tv_timer"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:visibility="gone"
                                android:layout_centerHorizontal="true"
                                android:fontFamily="@font/avalon_font"
                                android:text="@string/_00_00_00"
                                android:textColor="@color/black"
                                android:textSize="20sp" />

                            <RelativeLayout
                                android:id="@+id/second_elipse"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_centerInParent="true"
                                android:background="@drawable/ellipse_2" />

                            <RelativeLayout
                                android:id="@+id/connection_btn_block"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_centerInParent="true"
                                android:background="@drawable/ellipse_1">

                                <ImageView
                                    android:id="@+id/connect_btn"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_centerInParent="true"
                                    android:adjustViewBounds="true"
                                    android:contentDescription="@string/todo"
                                    android:maxWidth="@dimen/_240dp"
                                    android:padding="@dimen/_8dp"
                                    android:src="@drawable/main_icon" />


                            </RelativeLayout>

                        </RelativeLayout>

                        <TextView
                            android:id="@+id/vpn_connection_time"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="3dp"
                            android:layout_marginBottom="@dimen/_8dp"
                            android:text="@string/disconnected"
                            android:textColor="@color/black"
                            android:textSize="16sp"
                            android:visibility="gone" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="30dp"
                            android:layout_marginTop="20dp"
                            android:layout_marginRight="30dp"
                            android:layout_marginBottom="@dimen/vertical"
                            android:gravity="center"
                            android:orientation="horizontal"
                            android:paddingLeft="@dimen/_24dp"
                            android:paddingRight="@dimen/_24dp"
                            android:visibility="gone">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content" />

                            <ImageView
                                android:layout_width="24dp"
                                android:layout_height="24dp"
                                android:contentDescription="@string/todo"
                                android:src="@drawable/down_btn" />

                            <TextView
                                android:id="@+id/downloading_speed"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_weight="1"
                                android:fontFamily="@font/avalon_font"
                                android:gravity="center"
                                android:text="@string/_0_mbps"
                                android:textColor="@color/black"
                                android:textSize="16sp" />

                            <View
                                android:layout_width="1dp"
                                android:layout_height="match_parent"
                                android:background="@color/color_gray"
                                android:src="@drawable/lock" />

                            <TextView
                                android:id="@+id/uploading_speed"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_weight="1"
                                android:fontFamily="@font/avalon_font"
                                android:gravity="center"
                                android:text="@string/_0_mbps"
                                android:textColor="@color/black"
                                android:textSize="16sp" />

                            <ImageView
                                android:layout_width="24dp"
                                android:layout_height="24dp"
                                android:contentDescription="@string/todo"
                                android:src="@drawable/up_btn" />


                        </LinearLayout>

                        <RelativeLayout
                            android:id="@+id/btn_vpn_connect"
                            android:layout_width="220dp"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="30dp"
                            android:layout_marginRight="30dp"
                            android:layout_marginBottom="@dimen/vertical"
                            android:background="@drawable/round_background2"
                            android:padding="12dp">

                            <TextView
                                android:id="@+id/txt_vpn_connect"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_centerHorizontal="true"
                                android:ellipsize="end"
                                android:fontFamily="@font/avalon_font"
                                android:maxLines="1"
                                android:paddingLeft="16dp"
                                android:paddingRight="16dp"
                                android:text="Connect"
                                android:textColor="#ffffff"
                                android:textSize="14sp"
                                android:textStyle="bold" />

                        </RelativeLayout>

                        <RelativeLayout
                            android:id="@+id/vpn_select_country"
                            android:layout_width="220dp"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="30dp"
                            android:layout_marginRight="30dp"
                            android:layout_marginBottom="@dimen/vertical"
                            android:background="@drawable/round_background"
                            android:padding="12dp">

                            <ImageView
                                android:id="@+id/vpn_country_image"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignParentStart="true"
                                android:layout_centerVertical="true"
                                android:layout_gravity="center_vertical"
                                android:adjustViewBounds="true"
                                android:contentDescription="@string/todo"
                                android:gravity="center_vertical"
                                android:maxWidth="20dp"
                                android:maxHeight="20dp"
                                android:src="@drawable/f_0" />

                            <TextView
                                android:id="@+id/vpn_country_name"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_centerHorizontal="true"
                                android:layout_toEndOf="@+id/vpn_country_image"
                                android:ellipsize="end"
                                android:fontFamily="@font/avalon_font"
                                android:maxLines="1"
                                android:paddingLeft="16dp"
                                android:paddingRight="16dp"
                                android:visibility="gone"
                                android:text="Smart Connection"
                                android:textColor="@color/btn_border"
                                android:textSize="14sp"
                                android:textStyle="bold" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_centerHorizontal="true"
                                android:layout_toEndOf="@+id/vpn_country_image"
                                android:ellipsize="end"
                                android:fontFamily="@font/avalon_font"
                                android:maxLines="1"
                                android:paddingLeft="16dp"
                                android:paddingRight="16dp"
                                android:text="Smart Connection"
                                android:textColor="@color/btn_border"
                                android:textSize="14sp"
                                android:textStyle="bold" />


                        </RelativeLayout>


                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical">

                            <LinearLayout
                                android:id="@+id/go_pro"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="30dp"
                                android:layout_marginRight="30dp"
                                android:background="@drawable/main_btn_bg2"
                                android:orientation="horizontal"
                                android:visibility="gone">

                                <ImageView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="center_vertical"
                                    android:layout_marginLeft="@dimen/_16dp"
                                    android:layout_marginRight="@dimen/_16dp"
                                    android:adjustViewBounds="true"
                                    android:contentDescription="@string/todo"
                                    android:gravity="center_vertical"
                                    android:maxWidth="@dimen/_36dp"
                                    android:maxHeight="@dimen/_36dp"
                                    />

                                <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="center_vertical"
                                    android:gravity="center_vertical"
                                    android:orientation="vertical">

                                    <TextView
                                        android:id="@+id/subcription_tv"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:adjustViewBounds="true"
                                        android:fontFamily="@font/avalon_font"
                                        android:textSize="16sp"
                                        tools:ignore="TooDeepLayout" />

                                    <TextView
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:adjustViewBounds="true"
                                        android:fontFamily="@font/avalon_font"
                                        android:textSize="12sp" />
                                </LinearLayout>
                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="vertical">


                                <LinearLayout
                                    android:id="@+id/native_container"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_margin="5dp"
                                    android:orientation="vertical" />
                            </LinearLayout>


                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>


            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>